--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux":"^7.2.8",
-    "react-router-dom":"^6.3.0",
-    "redux":"^4.1.2"
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.1.2",
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -25,6 +26,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.67.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
