--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.23.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.8",
@@ -18,6 +20,7 @@
     "reset-css": "^5.0.2"
   },
   "devDependencies": {
+    "@types/node": "^20.6.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -25,9 +28,8 @@
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.67.0",
-    "typescript": "^5.0.2",
+    "typescript": "^4.6.3",
     "vite": "^4.4.5"
   }
 }
