当路径是子项 侧边栏默认打开展开项

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,11 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+
+    // 语法提示
+    "ignoreDeprecations": "5.0",
+    "suppressImplicitAnyIndexErrors": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
